# rust-big-data

./: Cargo.toml  README.md  RESULTS---cdc_restricted_by_sex_state.csv  small_data.csv
src/: lib.rs  main.rs
tests/: test_module.rs
tests/fake_source_data/: COVID_Cases_Restricted_Detailed_04302021_Part_1.csv  spark_part-00000-3146a6b9-0113-41df-a776-bfddb9bfce06-c000.csv  spark_part-00001-3146a6b9-0113-41df-a776-bfddb9bfce06-c000.csv
tests/fake_source_data/new_spark/: spark_part-00000-3146a6b9-0113-41df-a776-bfddb9bfce06-c000.csv  spark_part-00001-3146a6b9-0113-41df-a776-bfddb9bfce06-c000.csv
tests/fake_source_data/old/: COVID_Cases_Restricted_Detailed_04302021_Part_2.csv
tests/prod_data/: cdc_restricted_by_age_state.csv  cdc_restricted_by_race_state.csv  cdc_restricted_by_sex_state.csv
