[package]
name = "rust-big-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
csv = "1.2.2"
polars = { version = "0.32.1", features = ["lazy", "csv"] }
polars-core = "0.32.1"
polars-io = "0.32.1"
serde = "1.0.188"
serde_derive = "1.0.188"
